updated logic for acceptance

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 # CLIENT_SECRET = "oZdDNROPloGD7ejfkJLtrlC0L6L3Z7n50xHEBAh4OX3QHcECI5"
 # COMPANY_DOMAIN="oipl.bitrix24.in"
 
-CLIENT_ID = "local.664b0f441b4be8.22121143"
+CLIENT_ID = "local.665d3eeba10059.70978355"
 REDIRECT_URI = "http://localhost:3000/home"
-CLIENT_SECRET = "borh0rzwyFJ6VZcwKYTxweW4C0W4V6yq8ebR3iJBKhDibRy9mp"
-COMPANY_DOMAIN="b24-awzvaa.bitrix24.in"
+CLIENT_SECRET = "1UxalkeY9uHygFmM9LIHkW4Age9zfc6CCf4OFrw9LljEoBpEvf"
+COMPANY_DOMAIN="b24-ohsmbq.bitrix24.in"
