--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@
 # COMPANY_DOMAIN="oipl.bitrix24.in"
 
 CLIENT_ID = "local.665d3eeba10059.70978355"
-REDIRECT_URI = "http://192.168.0.113:3000/home"
+REDIRECT_URI = "http://localhost:3000/home"
 CLIENT_SECRET = "1UxalkeY9uHygFmM9LIHkW4Age9zfc6CCf4OFrw9LljEoBpEvf"
 COMPANY_DOMAIN="b24-ohsmbq.bitrix24.in"
