--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ CLIENT_ID = "local.665d3eeba10059.70978355"
 REDIRECT_URI = "http://192.168.0.113:3000/home"
 CLIENT_SECRET = "1UxalkeY9uHygFmM9LIHkW4Age9zfc6CCf4OFrw9LljEoBpEvf"
 COMPANY_DOMAIN="b24-ohsmbq.bitrix24.in"
+EXCHANGE_RATE_API_KEY=41224d798149d569df97e59e
