--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ REDIRECT_URI = "http://192.168.0.113:3000/home"
 CLIENT_SECRET = "1UxalkeY9uHygFmM9LIHkW4Age9zfc6CCf4OFrw9LljEoBpEvf"
 COMPANY_DOMAIN="b24-ohsmbq.bitrix24.in"
 EXCHANGE_RATE_API_KEY=41224d798149d569df97e59e
+SQLSCHEMANAME="root"
+SQLSCHEMAPASSWORD="1234"
+SQLHOST="localhost"
