added edit and delete btn in voucherViewer

--- a/.env
+++ b/.env
@@ -3,10 +3,10 @@
 # CLIENT_SECRET = "oZdDNROPloGD7ejfkJLtrlC0L6L3Z7n50xHEBAh4OX3QHcECI5"
 # COMPANY_DOMAIN="oipl.bitrix24.in"
 
-CLIENT_ID = "local.665d3eeba10059.70978355"
+CLIENT_ID = "local.666ff26b214701.46081432"
 REDIRECT_URI = "http://192.168.0.113:3000/home"
-CLIENT_SECRET = "1UxalkeY9uHygFmM9LIHkW4Age9zfc6CCf4OFrw9LljEoBpEvf"
-COMPANY_DOMAIN="b24-ohsmbq.bitrix24.in"
+CLIENT_SECRET = "mJtgCkyv3n28VjEFsTlnf7QacYk2dxwL6BcEkXNKSMXydIPIzK"
+COMPANY_DOMAIN="shivam.bitrix24.in"
 EXCHANGE_RATE_API_KEY=41224d798149d569df97e59e
 SQLSCHEMANAME="root"
 SQLSCHEMAPASSWORD="1234"
