--- a/.env
+++ b/.env
@@ -3,11 +3,23 @@
 # CLIENT_SECRET = "oZdDNROPloGD7ejfkJLtrlC0L6L3Z7n50xHEBAh4OX3QHcECI5"
 # COMPANY_DOMAIN="oipl.bitrix24.in"
 
-CLIENT_ID = "local.666ff26b214701.46081432"
-REDIRECT_URI = "http://192.168.0.113:3000/home"
-CLIENT_SECRET = "mJtgCkyv3n28VjEFsTlnf7QacYk2dxwL6BcEkXNKSMXydIPIzK"
-COMPANY_DOMAIN="shivam.bitrix24.in"
+# CLIENT_ID = "local.666ff26b214701.46081432"
+# REDIRECT_URI = "http://192.168.0.113:3000/home"
+# CLIENT_SECRET = "mJtgCkyv3n28VjEFsTlnf7QacYk2dxwL6BcEkXNKSMXydIPIzK"
+# COMPANY_DOMAIN="shivam.bitrix24.in"
+# EXCHANGE_RATE_API_KEY=41224d798149d569df97e59e
+# SQLUSERNAME="root"
+# SQLSCHEMAPASSWORD="1234"
+# SQLHOST="localhost"
+
+CLIENT_ID = "local.6648983f0cc5d5.97469898"
+REDIRECT_URI = "http://13.202.57.121:3000/home"
+CLIENT_SECRET = "oZdDNROPloGD7ejfkJLtrlC0L6L3Z7n50xHEBAh4OX3QHcECI5"
+COMPANY_DOMAIN="oipl.bitrix24.in"
 EXCHANGE_RATE_API_KEY=41224d798149d569df97e59e
-SQLSCHEMANAME="root"
-SQLSCHEMAPASSWORD="1234"
-SQLHOST="localhost"
+SQLSCHEMANAME="admin"
+SQLSCHEMAPASSWORD="ios12345"
+SQLHOST="vmsdb.cdygiaqiigir.ap-south-1.rds.amazonaws.com"
+
+
+
