updated logic for bitrix intregation

--- a/.env
+++ b/.env
@@ -12,14 +12,24 @@
 # SQLSCHEMAPASSWORD="1234"
 # SQLHOST="localhost"
 
-CLIENT_ID = "local.6648983f0cc5d5.97469898"
-REDIRECT_URI = "http://13.202.57.121:3000/home"
-CLIENT_SECRET = "oZdDNROPloGD7ejfkJLtrlC0L6L3Z7n50xHEBAh4OX3QHcECI5"
-COMPANY_DOMAIN="oipl.bitrix24.in"
+# CLIENT_ID = "local.6648983f0cc5d5.97469898"
+# REDIRECT_URI = "http://13.202.57.121:3000/home"
+# CLIENT_SECRET = "oZdDNROPloGD7ejfkJLtrlC0L6L3Z7n50xHEBAh4OX3QHcECI5"
+# COMPANY_DOMAIN="oipl.bitrix24.in"
+# EXCHANGE_RATE_API_KEY=41224d798149d569df97e59e
+# SQLUSERNAME="admin"
+# SQLSCHEMAPASSWORD="ios12345"
+# SQLHOST="vmsdb.cdygiaqiigir.ap-south-1.rds.amazonaws.com"
+
+
+#---------------------Aivien---------------------
+
+CLIENT_ID = "local.668781624cf843.86743111"
+REDIRECT_URI = "http://localhost:3000/home"
+CLIENT_SECRET = "GbAvQl5sWSwCC2R2KDJ9HDQiDGRp7thXKuB5vgdyuBZ5nNlIPY"
+COMPANY_DOMAIN="b24-ye5msp.bitrix24.in"
 EXCHANGE_RATE_API_KEY=41224d798149d569df97e59e
-SQLSCHEMANAME="admin"
-SQLSCHEMAPASSWORD="ios12345"
-SQLHOST="vmsdb.cdygiaqiigir.ap-south-1.rds.amazonaws.com"
-
-
+SQLUSERNAME="avnadmin"
+SQLSCHEMAPASSWORD="AVNS_j1fjMEOvPrC8lCt6G6b"
+SQLHOST="tourvoucher-tourvoucher.f.aivencloud.com"
 
