updated logic for bitrix intregation

--- a/.env
+++ b/.env
@@ -24,5 +24,12 @@
 
 #---------------------Aivien---------------------
 
-
+CLIENT_ID = "local.668781624cf843.86743111"
+REDIRECT_URI = "http://localhost:3000/home"
+CLIENT_SECRET = "GbAvQl5sWSwCC2R2KDJ9HDQiDGRp7thXKuB5vgdyuBZ5nNlIPY"
+COMPANY_DOMAIN="b24-ye5msp.bitrix24.in"
+EXCHANGE_RATE_API_KEY=41224d798149d569df97e59e
+SQLUSERNAME="avnadmin"
+SQLSCHEMAPASSWORD="AVNS_j1fjMEOvPrC8lCt6G6b"
+SQLHOST="tourvoucher-tourvoucher.f.aivencloud.com"
 
