added logic for testing bacckend authorization

--- a/.env
+++ b/.env
@@ -8,9 +8,9 @@
 # CLIENT_SECRET = "mJtgCkyv3n28VjEFsTlnf7QacYk2dxwL6BcEkXNKSMXydIPIzK"
 # COMPANY_DOMAIN="shivam.bitrix24.in"
 # EXCHANGE_RATE_API_KEY=41224d798149d569df97e59e
-# SQLUSERNAME="root"
-# SQLSCHEMAPASSWORD="1234"
-# SQLHOST="localhost"
+SQLUSERNAME="root"
+SQLSCHEMAPASSWORD="1234"
+SQLHOST="localhost"
 
 # CLIENT_ID = "local.6648983f0cc5d5.97469898"
 # REDIRECT_URI = "http://13.202.57.121:3000/home"
@@ -23,13 +23,12 @@
 
 
 #---------------------Aivien---------------------
-
 CLIENT_ID = "local.668781624cf843.86743111"
 REDIRECT_URI = "http://localhost:3000/home"
 CLIENT_SECRET = "GbAvQl5sWSwCC2R2KDJ9HDQiDGRp7thXKuB5vgdyuBZ5nNlIPY"
 COMPANY_DOMAIN="b24-ye5msp.bitrix24.in"
 EXCHANGE_RATE_API_KEY=41224d798149d569df97e59e
-SQLUSERNAME="avnadmin"
-SQLSCHEMAPASSWORD="AVNS_j1fjMEOvPrC8lCt6G6b"
-SQLHOST="tourvoucher-tourvoucher.f.aivencloud.com"
+# SQLUSERNAME="avnadmin"
+# SQLSCHEMAPASSWORD="AVNS_j1fjMEOvPrC8lCt6G6b"
+# SQLHOST="tourvoucher-tourvoucher.f.aivencloud.com"
 
