--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "nodemon": "^3.1.0",
     "querystring": "^0.2.1",
     "sequelize": "^6.37.3"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.6.2"
   }
 }
